tests/ui/g-route-resolved-intra-arm-duplicate-label.stderr
error[E0080]: evaluation panicked: parallel frontier logical labels must be unique
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<1, hibana::g::Resolve<hibana::g::Route<hibana::g::Par<hibana::g::Send<0, 1, hibana::g::Msg<9, ()>>, hibana::g::Send<2, 1, hibana::g::Msg<9, ()>>>, hibana::g::Send<0, 1, hibana::g::Msg<10, ()>>>, 7>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Resolve<Route<Par<hibana::g::Send<0, 1, Msg<9, ()>>, hibana::g::Send<2, 1, Msg<9, ()>>>, hibana::g::Send<0, 1, Msg<10, ()>>>, 7>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |             panic!("parallel frontier logical labels must be unique")
  |             --------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<1, Resolve<Route<Par<hibana::g::Send<0, 1, Msg<9, ()>>, hibana::g::Send<2, 1, Msg<9, ()>>>, hibana::g::Send<0, 1, Msg<10, ()>>>, 7>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
